added brighten method